# game_of_life_3d

./: Cargo.toml  alexisbox.gltf
src/: camera.rs  lib.rs  main.rs  model.rs  shader.wgsl  utils.rs
src/game/: mod.rs
src/game_of_life/: mod.rs
