[package]
name = "game_of_life_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
glam = { version = "0.20.1", features = ["bytemuck"] }
bytemuck = "1.7.3"
bytemuck_derive = "1.0.1"
hecs = "0.7.3"
wgpu = "0.12"
