[package]
name = "game_of_life_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gameoflife"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
[[bin]]
name = "thing"
path = "src/main.rs"

[dependencies]
winit = "0.26"
# na = { version = "0.20.1", features = ["bytemuck"] }
nalgebra = { version = "0.30.0", features = ["bytemuck"] }
bytemuck = "1.7.3"
bytemuck_derive = "1.0.1"
hecs = "0.7.3"
wgpu = "0.12"
gltf = "0.16.0"
futures = "0.3.19"
log = "0.4.14"
env_logger = "0.9.0"
image = "0.23.14"
cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")']

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.55", features = [
	"Gpu",
	"GpuUncapturedErrorEvent",
]}
